--- a/src/main/resources/config/localEnv.properties
+++ b/src/main/resources/config/localEnv.properties
@@ -1,5 +1,5 @@
 #---------------------LOCAL Execution Info-----------------------------------
-
+url=https://www.saucedemo.com/
 browser=chrome
 
 #--------------------------------------------------------------------
